static/v2/css/page-theme.css
/* ... */
.markdown-body blockquote.knowledge-check {
  border-color: var(--knowledge-check-highlight-color);
}

.markdown-body blockquote.warning {
  border-color: var(--border-color-warning);
}

.markdown-body blockquote.extreme-warning {
  color: var(--black);
  border-color: var(--background-color-warning);
  background-color: var(--background-color-warning);
  font-weight: 600;
}

/* ------------------------- Page header and footer ------------------------- */

#tc-header {
  background: var(--background-color-nav);
  color: var(--text-color-on-emphasis);
}

#tc-header-temp {
  background: var(--background-color-nav);
  color: var(--text-color-on-emphasis);
  position: sticky;
  top: 0;
  height: 50px;
}

#tc-nav {
  height: 49px;
}

#tc-sub-nav-button {
  background: none;
  color: var(--text-color-on-emphasis);
}

#tc-hamburger-icon,
#tc-close-icon {
  display: none;
}

#tc-sub-nav-container {
  grid-template-rows: 0fr;
  transition: grid-template-rows 0.35s;
}

#tc-main-container {
  transition: grid-template-rows 0.35s;
}

#tc-footer {
  background: var(--background-color-nav);
  color: var(--text-color-on-emphasis);
}

#tc-footer-items {
  height: 39px;
}

#tc-footer-right,
#tc-footer-left {
  flex-grow: 1;
  flex-basis: 0;
}

#tc-left-nav-lg {
  display: none;
}

#tc-right-nav-lg {
  display: none;
}

#tc-footer-legal {
  color: var(--text-color-on-emphasis-muted);
  line-height: 16px;
}

#tc-footer-right {
  display: flex;
  justify-content: flex-end;
}

#tc-sub-nav {
  visibility: hidden;
  overflow-y: hidden;
}

#tc-sub-nav.visible {
  visibility: visible;
}

#tc-hamburger-icon.visible,
#tc-close-icon.visible {
  display: block;
}

#tc-header.no-stick {
  position: static;
  top: auto;
}

#tc-sub-nav-container.open {
  grid-template-rows: 1fr;
}

#tc-sub-nav h2 {
  border-bottom: none;
}

#tc-sub-nav button {
  background-color: var(--background-color-subtle);
  color: var(--text-color-default);
}

#tc-sub-nav a,
#tc-sub-nav li {
  color: var(--text-color-on-emphasis);
}

#tc-sub-nav code {
  padding: 0.2em 0.4em;
  margin: 0;
  font-size: 90%;
  background-color: var(--background-color-inline-code);
  color: var(--text-color-inline-code);
  border-radius: 3px;
}

#tc-sub-nav button:hover {
  background-color: var(--background-color-subtle-hover);
}

#tc-sub-nav a:hover {
  color: var(--text-color-accent);
}

#tc-sub-nav a.complete,
#tc-sub-nav li.complete {
  color: var(--text-color-on-emphasis-muted);
}

#tc-sub-nav a.current,
#tc-sub-nav li.current,
#tc-sub-nav a.current code {
  color: var(--text-color-accent);
}

#tc-sub-nav a.complete:hover,
#tc-sub-nav a.current:hover,
#tc-sub-nav a.current:hover code {
  color: var(--text-color-accent);
}

#tc-footer-items p {
  margin: 0;
}

#tc-footer-legal a {
  color: var(--text-color-on-emphasis-muted);
}

#tc-footer-items a {
  color: var(--text-color-on-emphasis);
}

#tc-footer-items a code {
  padding: 0.2em 0.4em;
  margin: 0;
  font-size: 90%;
  background-color: var(--background-color-inline-code);
  color: var(--text-color-inline-code);
  border-radius: 3px;
}

#tc-footer-items a:hover,
#tc-footer-legal a:hover,
#tc-footer-items a:hover code {
  color: var(--text-color-accent);
}

/* Stop animations */

@media screen and (prefers-reduced-motion: reduce) {
  #tc-sub-nav-container {
    transition: none;
  }
}

/*
When navigating to a heading element on a page the heading text will be
obscured under the sticky nav by default. This code moves the page up 
slightly so that the header text it is no longer obscured when navigating
to these types of links.
*/

:target {
  scroll-margin-top: 60px;
}

/* Change footer nav display on small format screens */

@media (min-width: 800px) {
  #tc-left-nav-sm,
  #tc-right-nav-sm {
    display: none;
  }

  #tc-left-nav-lg,
  #tc-right-nav-lg {
    display: block;
  }
}

/* ---------------------------------- Hero ---------------------------------- */
/* 
  General maintenance note - some of this code could be removed in favor of 
  using the design system classes above on these elements - if you're touching 
  this code and have time to make those updates, that would be a big win!
*/

#hero {
  aspect-ratio: 64 / 11;
  display: flex;
  align-items: center;
  background-color: var(--background-color-nav);
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  margin-bottom: 16px;
}

#hero div {
  height: 48%;
  aspect-ratio: 1 / 1;
  margin: 0 4.5%;
}

#hero h1 {
  display: flex;
  flex-direction: column;
  color: var(--white);
  margin: 16px 4.5% 16px 0;
  font-size: clamp(24px, 4.6vw, 48px);
  line-height: clamp(24px, 4.6vw, 48px);
  font-family: var(--barlow-condensed-bold), var(--system-fonts);
}

#hero h1 .prefix + .headline,
#hero h1 .headline + .subhead {
  margin-top: 6px;
}

#hero h1 .prefix,
#hero h1 .subhead {
  font-size: clamp(16px, 2.9vw, 30px);
  line-height: clamp(16px, 2.9vw, 30px);
  font-family: var(--barlow-semi-condensed-semibold), var(--system-fonts);
}

#hero code {
  color: var(--text-color-inline-code);
  padding: 2px 4px;
  margin: 0 1px;
}

#hero code.filepath {
  color: var(--text-color-file);
}

/* -------------------- Activity Banners / Timed section -------------------- */
/* 
  General maintenance note - some of this code could be removed in favor of 
  using the design system classes above on these elements - if you're touching 
  this code and have time to make those updates, that would be a big win!
*/

.activity {
  width: 100%;
  background-color: rgb(var(--activity-banner-background-color-rgb));
  margin-bottom: 20px;
}

.activity > .container {
  border-width: 2px 2px 24px;
  border-style: solid;
  padding: 8px 1.5% 10px;
}

.activity h2,
.activity h3 {
  font-family: var(--barlow-condensed-bold), var(--system-fonts);
  font-size: 1.75em;
  line-height: 1em;
  margin: 0 72px 8px 0;
  padding: 0;
  border: none;
  text-wrap: balance;
}
/* ... */

